# Lahimena

./: .gitignore  .~lock.data-hotel.xlsx#  AUDIT_COMPLETE_NOTICE.md  Makefile  PHASE1_COMPLETION.md  QUICK_START.sh  README.md  activity_log.json  config.json  config.py  conftest.py  data-hotel.xlsx  data.xlsx  main.py  pyproject.toml  pytest.ini  requirements-financial.txt  requirements-test.txt  requirements.txt  setup.cfg  users.json
.github/workflows/: ci.yml
ApiOK/: README.md  config.py  main.py
ApiOK/gui/: main_content.py  sidebar.py
devis/: DEVIS_HOTEL_20260204_003632.txt  DEVIS_HOTEL_20260204_003735.txt
docs/: 00_START_HERE.md  COTATION_H_ARCHITECTURE.md  COTATION_H_CHANGELOG.md  COTATION_H_DEVELOPER_GUIDE.md  COTATION_H_EXAMPLES.md  COTATION_H_GUIDE.md  COTATION_H_IMPLEMENTATION_CHECKLIST.md  COTATION_H_TECHNICAL.md  FILES_INVENTORY.md  IMPLEMENTATION_COMPLETE.md  Index_Documentation.md  Manuel_Executable_Lahimena_Tours.docx  Manuel_Utilisation_Lahimena_Tours.docx  PHASE2_P1_COMPLETION_SUMMARY.md  README_COTATION_H.md  Tutoriel_Lahimena_Tours.docx
gui/: date_picker_utils.py  main_content.py  sidebar.py  ui_style.py
models/: client_data.py  hotel_data.py
scripts/: run_tests.sh
tests/: README.md  __init__.py  test_client_air_ticket_cotation.py  test_client_billing.py  test_config.py  test_excel_handler.py  test_financial_tool.py  test_invoicing.py  test_models.py  test_transport_normalization.py  test_validators.py
utils/: activity_log.py  auth_handler.py  cache.py  client_billing.py  excel_handler.py  logger.py  pdf_generator.py  validators.py
(+87 files in other folders)
